--- a/ColumnDesign/MainWindow.xaml
+++ b/ColumnDesign/MainWindow.xaml
@@ -41,7 +41,11 @@
 
         <Grid Grid.Row="2">
             <StackPanel Orientation="Horizontal">
-                <Image Height="30" VerticalAlignment="Center" Source="Resources/MagmaWorks_logo.png">
+                <Image 
+                    Height="30" 
+                    VerticalAlignment="Center" 
+                    Source="Resources/MagmaWorks_logo.png" 
+                    RenderOptions.BitmapScalingMode="Fant">
                     <Image.ToolTip>
                         <StackPanel Background="White" Width="300">
                             <Image HorizontalAlignment="Left" Height="30"  Source="Resources/MagmaWorks_logo.png"></Image>
@@ -64,7 +68,19 @@
                 <TextBlock FontFamily="Franklin Gothic" FontSize="25" Text="ACE" VerticalAlignment="Center"  Margin="15 0 0 0"/>
             </StackPanel>
 
-            <Image Source="Resources/WhitbyWood.jpg" HorizontalAlignment="Right" Height="30" Margin="0 0 30 0"/>
+            <Button
+                Height="50"
+                BorderThickness="0"
+                Background="Transparent"
+                HorizontalAlignment="Right"  
+                Margin="0 0 30 0"
+                Click="MWLogo_Click">
+                <Image 
+                    Source="Resources/MagmaWorksFullLogo.png" 
+                    RenderOptions.BitmapScalingMode="Fant"
+                    HorizontalAlignment="Right" 
+                    Height="40"/>
+            </Button>
         </Grid>
         
     </Grid>
