--- a/ColumnDesign/UCColumnLayout.xaml
+++ b/ColumnDesign/UCColumnLayout.xaml
@@ -60,6 +60,9 @@
                             <DataTrigger Binding="{Binding Shape}" Value="TShaped">
                                 <Setter Property="Visibility" Value="Visible"/>
                             </DataTrigger>
+                            <DataTrigger Binding="{Binding Shape}" Value="CustomShape">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Polyline.Style>
@@ -89,6 +92,9 @@
                                 <Setter Property="Visibility" Value="Hidden"/>
                             </DataTrigger>
                             <DataTrigger Binding="{Binding Shape}" Value="TShaped">
+                                <Setter Property="Visibility" Value="Hidden"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding Shape}" Value="CustomShape">
                                 <Setter Property="Visibility" Value="Hidden"/>
                             </DataTrigger>
                         </Style.Triggers>
